# FastAPI-with-SQL-Server

./: README.md  pyproject.toml
controller/: person.py
database/: connection.py
routes/: app.py
schema/: create_schema.py  schema_AdventureWorks_Person.py
